[package]
name = "rampon_anchor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor = { git = "ssh://git@github.com/Annex-engineering/anchor.git" }
rp2040-hal = "0.8.0"
rp-pico = "0.7.0"
panic-halt = "*"
cortex-m-rt = "0.7.3"
cortex-m = "0.7.7"
embedded-hal = "*"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
fugit = "*"

[build-dependencies]
anchor_codegen = { git = "ssh://git@github.com/Annex-engineering/anchor.git" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
